src/network_policies/test1default-fluidos-consumer-fe7e79b17f661867a813a8a9ad57a2c476419a43e4040a5eecaa01449d4a7638cc733c Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test1default-fluidos-consumer-fe7e79b17f661867a813a8a9ad57a2c476419a43e4040a5eecaa01449d4a7638cc733c
  namespace: default-fluidos-consumer-fe7e79
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: product-catalogue
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default-fluidos-consumer-fe7e79
      podSelector: {}
    ports:
    - port: 80
      protocol: TCP
